--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,5 @@
 body{ 
-  margin: auto;
-  width: auto;
-  min-width: 600px;
+ margin: auto; 
 }
 
 .top-container{
@@ -66,7 +64,7 @@ header p{
   background-color: rgb(137, 226, 210);
 }
 .study{
-  width: 290px;
+  width: 20%;
   height: 220px;
   padding-top: 15px;
   float: left;
@@ -77,11 +75,12 @@ header p{
   padding: 10px;
 }
 .education-table{
-  position: relative;
-  margin: 0 auto 0 auto;
-  width: 75%;
+  width: auto;
   height: 100px;
   font-family: Mali;
+  max-width: 100%;
+  padding-left: 5%;
+  border-spacing: 5px;
 }
 
 .education-table th, .education-table td{
@@ -132,6 +131,7 @@ header p{
   font-family: Mali;
   font-size: 25px;
   color: rgb(3, 27, 3);
+  text-align: center;
 }
 .hobby{
   width: 290px;
@@ -140,15 +140,15 @@ header p{
   float: left;
 }
 .hobbies p{
-  position: relative;
-  left: 400px;
+  display: inline-block;
+ 
 }
 .hobby-list{
-  position: relative;
   list-style-position: inside;
-  left: 370px;
+  margin: 0 80px 0 auto;
+  width: 40%;
   padding: 15px 0 0 0;
-  margin: 0;
+  text-align: justify;
 }
 .hobby-list li{
   padding: 5px;
